fixed collapsed marging on web buttons.

--- a/src/kirby/components/button/button.component.scss
+++ b/src/kirby/components/button/button.component.scss
@@ -1,7 +1,7 @@
 @import '../../scss/web-imports';
 
 :host {
-  margin: 0.25em 0.25em;
+  // margin: 0.25em 0.25em;
   --kirby-button-border-radius: 2rem;
   background-color: get-color('kirby-primary');
   border-radius: var(--kirby-button-border-radius);
@@ -10,6 +10,7 @@
   cursor: pointer;
   transition: opacity 200ms linear;
   
+  margin: size('xxs');
   padding: size('xs') size('m') size('xs') size('m');
   font-size: font-size('s');
   height: size('xl');
@@ -27,7 +28,7 @@
   }
 
   &[expand='block'] {
-    display: block;
+    display: inline-block;
     width: 100%;
   }
 
